# DndMonsterManager

./: CMakeLists.txt  README.md
data/monsters/: Aarakocra.json  Aboleth.json  Deva.json  Planetar.json  Solar.json
src/: main.cpp
src/gui/: MainWindow.cpp  MainWindow.hpp
src/model/: Monster.cpp  Monster.hpp  MonsterManager.hpp  Templates.hpp
